--- a/website/index.html
+++ b/website/index.html
@@ -6,19 +6,17 @@
 <meta charset="UTF-8">
 <title>Home</title>
 </head>
+
 <style>
-.title{
-    text-align:center;
-	font-family:arial;
-	letter-spacing:1px;
-	font-size:18px;
-	}
+p{
+    text-align: center;
+}
 </style>
 
 <body>
 
-<header>
 
+<header>
 <nav>
    <h3>
       <li><a href="index.html">Home</a></li>
@@ -29,19 +27,37 @@
 </nav>
 <hr/>
 <hr/>
-
 </header>
-<div id="barba-wrapper">
-    <div class="barba-container">
+
 <div class ="title">
 <h2>Homepage</h2>
-</div
-<p> In this website you will find a variety of my work including 3D modeling, sound design and miscellaneous other work.</p>
 </div>
+<p> Hi, My name is Ben and im currently a student studying game design. </p>
+<p> In this website you will find a variety of my work including 3D modeling, sound design and miscellaneous other work. </p>
+
+   <div class ="space">
+    <img class="space" src="images/homeimage.jpg" alt="space">
+</div>
+
+<div class="slider">
+ 
 </div>
 
 
+<footer>
+    <div>
+        <button class="button">dark</button>
+      </div>
+</footer>
 
+
+
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineMax.min.js" integrity="sha512-lJDBw/vKlGO8aIZB8/6CY4lV+EMAL3qzViHid6wXjH/uDrqUl+uvfCROHXAEL0T/bgdAQHSuE68vRlcFHUdrUw==" crossorigin="anonymous"></script>
+<script src="javascript.js"></script>
 
 </body>
 
