--- a/website/index4.html
+++ b/website/index4.html
@@ -23,6 +23,13 @@
 <h2> Contact </h2>
 
 
+
+<footer>
+   <div>
+       <button class="button">dark</button>
+     </div>
+   </footer>
+
 </body>
 
 
