--- a/website/index2.html
+++ b/website/index2.html
@@ -7,51 +7,6 @@
 </head>
 
 
-<!-- Gallery specific styling-->
-<style>
-.box{
-    max-width:850px;
-	margin:auto;
-	background:#f2f2f2;
-	overflow:auto;
-	}
-
-.gallery{
-    margin:16px;
-	border:1px solid;
-	float:left;
-	width:390px;
-	}
-	
-.gallery img{
-	transition: 1s;
-    width:100%;
-	height:auto;
-	}
-
-.gallery img:hover {
-	transform:scale(1.1);
-}
-	
-.description{
-    padding:2px;
-	text-align:center;
-	}
-
-footer{
-    font-family:arial;
-    position:absolute;
-	bottom: 0;
-	width: 100%;
-    padding:10px;
-	background:brown;
-	color:white;
-	text-align:center;
-	letter-spacing:2px;
-	font-weight:italic;
-	font-weight:bold;
-	}
-</style>
 
 <body>
 <header>
@@ -95,9 +50,17 @@ footer{
 </div>
 	
 </div>
+
+
+
 <footer>
--Coming soon-
-</footer>
+    <div>
+		-More Coming soon-
+        <button class="button">dark</button>
+      </div>
+    </footer>
+
+
 
 
 </body>
