--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,7 @@ p{
    <h3>
       <li><a href="index.html">Home</a></li>
       <li><a href="index2.html">Gallery</a></li>
-      <li><a href="index3.html">News</a></li>
+      <li><a href="index3.html">CV</a></li>
       <li><a href="index4.html">Contact</a></li>
     </h3>
 </nav>
@@ -53,11 +53,9 @@ p{
 
 
 
-
-
+<script src="javascript.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineMax.min.js" integrity="sha512-lJDBw/vKlGO8aIZB8/6CY4lV+EMAL3qzViHid6wXjH/uDrqUl+uvfCROHXAEL0T/bgdAQHSuE68vRlcFHUdrUw==" crossorigin="anonymous"></script>
-<script src="javascript.js"></script>
 
 </body>
 
