--- a/website/index2.html
+++ b/website/index2.html
@@ -16,7 +16,7 @@
    <h3>
       <li><a href="index.html">Home</a></li>
       <li><a href="index2.html">Gallery</a></li>
-      <li><a href="index3.html">News</a></li>
+      <li><a href="index3.html">CV</a></li>
       <li><a href="index4.html">Contact</a></li>
     </h3>
 </nav>
