--- a/website/index3.html
+++ b/website/index3.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="stylesheet.css">
 <meta charset="UTF-8">
-<title>News</title>
+<title>CV</title>
 </head>
 
 <body>
@@ -13,16 +13,29 @@
    <h3>
       <li><a href="index.html">Home</a></li>
       <li><a href="index2.html">Gallery</a></li>
-      <li><a href="index3.html">News</a></li>
+      <li><a href="index3.html">CV</a></li>
       <li><a href="index4.html">Contact</a></li>
     </h3>
 </nav>
+
 <hr/>
 <hr/>
+
 </header>
 
-<h2> News </h2>
+<div class ="title">
+   <h2>CV</h2>
 
+   </div>
+
+   <div class="cvtitle">
+<h2>Downloadable PDF</h2>
+<p>(Opens in new tab)</p>
+</div>
+
+   <div style="position: relative; left: 100px;">
+       <a href="downloadables/CV.pdf" target="_blank"> <img src="images/pdf.png" alt=""></a>
+   </div>
 
 <footer>
    <div>
