--- a/website/index4.html
+++ b/website/index4.html
@@ -12,7 +12,7 @@
    <h3>
       <li><a href="index.html">Home</a></li>
       <li><a href="index2.html">Gallery</a></li>
-      <li><a href="index3.html">News</a></li>
+      <li><a href="index3.html">CV</a></li>
       <li><a href="index4.html">Contact</a></li>
     </h3>
 </nav>
@@ -20,9 +20,24 @@
 <hr/>
 </header>
 
-<h2> Contact </h2>
-
-
+<div class ="title">
+   <h2>Contact</h2>
+      <p> E-mail: Ben27242271@gmail.com</p>
+      <p> Mobile: 07412273270 </p>
+      <p> Address:</p>
+   <div style="position: relative; top: -15px;">
+      <p>702E, home park</p>
+   <div style="position: relative; top: -15px;">
+      <p>York road, Bournemouth</p>
+   <div style="position: relative; top: -15px;">
+      <p>BH1 3BW</p>
+   <div style="position: relative; top: -15px;">
+      <p>England, United kingdom</p>
+   </div>
+   </div>
+   </div>
+   </div>
+   </div>
 
 <footer>
    <div>
