--- a/website/index4.html
+++ b/website/index4.html
@@ -39,6 +39,8 @@
    </div>
    </div>
 
+   <img src="images/contact.jpg" style="width: 100%;" alt="game designer">
+
 <footer>
    <div>
        <button class="button">dark</button>
